[package]
name = "serial-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14.3"
glib = "0.14.8"
once_cell = "1.8.0"
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.29.1", features = ["full"] }
serialport = "4.0.1"
tokio-util = {version = "0.7.8", features = ["codec"]}
tokio-serial = "5.4.4"
bytes = "1.1.0"
regex = "1.5.4"
chrono = "0.4.19"
rusb = "0.9.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
